<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="btn_register">DAFTAR</string>
    <string name="welcome_to_fitcal">WELCOME TO \n FITCAL</string>
    <string name="opening_text">Your Daily Guide to a Healthier Life</string>
    <string name="question_login">Atau Login dengan </string>
    <string name="Google">Google</string>
    <string name="don_t_have_an_account">Belum Memiliki Akun?</string>
    <string name="register"> daftar</string>
    <string name="tv_help_Center">butuh bantuan? kunjungi pusat bantuan kami</string>
    <string name="register_title">DAFTAR</string>
    <string name="tv_Opening">Masukkan detail Anda untuk mendaftar</string>
    <string name="name_register">Nama</string>
    <string name="edt_date_of_birth">Tanggal Lahir</string>
    <string name="edt_gender">Jenis Kelamin</string>
    <string name="edt_email">Email</string>
    <string name="edt_number_phone">Nomor Handphone</string>
    <string name="text_checkbox">Saya setuju dengan syarat dan ketentuan</string>
    <string name="tv_hel_register">Butuh Bantuan ? Kunjungi kami di <b>Pusat Bantuan</b></string>
    <string name="title_activity_buttom_navigation_view">ButtomNavigationView</string>
    <string name="title_physical">Fitguide</string>
    <string name="title_calories">Nutrition</string>
    <string name="title_sleepcycle">SleepCycle</string>
    <string name="title_activity_buttom_navigation">ButtomNavigation</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profil</string>
    <string name="log_out">Log out</string>
    <string name="result_sleep">insomnia</string>
    <string name="suggestion_sleep">Saran Untuk Anda</string>
    <string name="activity">Peregangan ringan sebelum tidur</string>
    <string name="reason">Aktivitas ringan seperti peregangan dapat membantu meredakan ketegangan otot dan pikiran.</string>
    <string name="prediction">PREDIKSI</string>
    <string name="calorie_count">Jumlah Kalori</string>
    <string name="calorie_Category">Kategori Kalori</string>
    <string name="water">Air (gram)</string>
    <string name="food_category">Kategori Makanan</string>
    <string name="protein">Protein (gram)</string>
    <string name="oil">Lemak (gram)</string>
    <string name="ash">Ash (gram)</string>
    <string name="fiber">Serat (gram)</string>
    <string name="carbohydrate">Karbo (gram)</string>
    <string name="sugar">Gula (gram)</string>
    <string name="suggestion1">Berjalan kaki selama 30 menit dengan kecepatan sedang</string>
    <string name="reason1">Aktivitas ini membantu membakar kalori dan meningkatkan kesehatan jantung. 690.5 kalori cukup tinggi, sehingga diperlukan aktivitas fisik untuk mengimbanginya.</string>
    <string name="diastolic">diastolik (mmHg)</string>
    <string name="systolic">Systolik (mmHg)</string>
    <string name="daily_steps">Jumlah Langkah perhari</string>
    <string name="heart_rate">Detak Jantung permenit</string>
    <string name="bmi">BMI</string>
    <string name="physical_activity">Tingkat Aktivitas Fisik (1 - 10)</string>
    <string name="stress_level">Tingkat Stres (1 - 10)</string>
    <string name="quality_sleep">Kualitas Tidur (1 -10)</string>
    <string name="sleep_duration">Durasi tidur anda perhari (jam)</string>
    <string name="age">Umur</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="body_temp">suhu tubuh (celcius)</string>
    <string name="activity_duration">Durasi Aktivitas (jam)</string>
    <string name="weight">Berat Badan (Kg)</string>
    <string name="high">Tinggi Badan (cm)</string>
</resources>