<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capstoneproject.View.ui.physical.PhysicalFragment"
        android:label="@string/title_physical"
        tools:layout="@layout/fragment_physical" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.capstoneproject.View.ui.dashboard.CaloriesFragment"
        android:label="@string/title_calories"
        tools:layout="@layout/fragment_calories" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.capstoneproject.View.ui.sleepcycle.SleepCycleFragment"
        android:label="@string/title_sleepcycle"
        tools:layout="@layout/fragment_sleepcycle" />
</navigation>